# Heracles

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  default.nix  flake.nix  jsconfig.json  result
.claude/: rigor.db  rigor.db-shm  settings.local.json
.sdlc/: code-review.md
artifacts/: mock-dark.html  mock-light.html  ux-design-spec.md
docs/: ux-multi-select-filter.md
examples/: example_bad_dashboard.yaml  example_dashboards.yaml
src/: dashboard.rs  main.rs  query.rs  routes.rs
src/query/: logsql.rs  loki.rs  mod.rs  prom.rs
static/: lib.d.js  lib.js  lib.mjs  site.css
tests/: TAP.mjs  Tap.d.js  TapHarness.html  suite.mjs
