[package]
name = "heracles"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-io = "2.3.1"
axum = { version = "0.7.4", features = ["http2", "query"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.33", features = ["alloc", "std", "now", "serde"] }
clap = { version = "4.4.18", features = ["derive"] }
maud = { version = "0.26.0", features = ["axum"] }
parse_duration = "2.1.1"
prometheus-http-query = "0.8.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
smol = "2.0.0"
smol-axum = "0.1.0"
smol-macros = "0.1.0"
tokio = { version = "1.36.0", features = ["net", "rt", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
